; ModuleID = '/home/carl/AnghaBench/vlc/src/preparser/extr_fetcher.c_CloseWorker.c'
source_filename = "/home/carl/AnghaBench/vlc/src/preparser/extr_fetcher.c_CloseWorker.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fetcher_thread = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @CloseWorker to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CloseWorker(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.fetcher_thread*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.fetcher_thread*
  store %struct.fetcher_thread* %7, %struct.fetcher_thread** %5, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 @VLC_UNUSED(i8* %8)
  %10 = load %struct.fetcher_thread*, %struct.fetcher_thread** %5, align 8
  %11 = getelementptr inbounds %struct.fetcher_thread, %struct.fetcher_thread* %10, i32 0, i32 0
  %12 = call i32 @vlc_interrupt_kill(i32* %11)
  %13 = load %struct.fetcher_thread*, %struct.fetcher_thread** %5, align 8
  %14 = getelementptr inbounds %struct.fetcher_thread, %struct.fetcher_thread* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @vlc_join(i32 %15, i32* null)
  %17 = load %struct.fetcher_thread*, %struct.fetcher_thread** %5, align 8
  %18 = getelementptr inbounds %struct.fetcher_thread, %struct.fetcher_thread* %17, i32 0, i32 0
  %19 = call i32 @vlc_interrupt_deinit(i32* %18)
  %20 = load %struct.fetcher_thread*, %struct.fetcher_thread** %5, align 8
  %21 = call i32 @free(%struct.fetcher_thread* %20)
  ret void
}

declare dso_local i32 @VLC_UNUSED(i8*) #1

declare dso_local i32 @vlc_interrupt_kill(i32*) #1

declare dso_local i32 @vlc_join(i32, i32*) #1

declare dso_local i32 @vlc_interrupt_deinit(i32*) #1

declare dso_local i32 @free(%struct.fetcher_thread*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
